force-app/main/default/objects/Monthly_Travel_Expense__c/Monthly_Travel_Expense__c.object-meta.xml
<CustomObject>
    <label>Monthly Travel Expense</label>
    <nameField>
        <label>Monthly Travel Expense Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Monthly Travel Expenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>