force-app/main/default/objects/Monthly_Travel_Expense__c/fields/Expense_Month__c.field-meta.xml
<CustomField>
    <fullName>Expense_Month__c</fullName>
    <label>Expense Month</label>
    <length>50</length>
    <type>Text</type>
</CustomField>