force-app/main/default/objects/Monthly_Travel_Expense__c/fields/Expense_Year__c.field-meta.xml
<CustomField>
    <fullName>Expense_Year__c</fullName>
    <label>Expense Year</label>
    <length>50</length>
    <type>Text</type>
</CustomField>