force-app/main/default/objects/Monthly_Travel_Expense__c/fields/MTE_Date__c.field-meta.xml
<CustomField>
    <fullName>MTE_Date__c</fullName>
    <label>MTE Date</label>
    <type>Date</type>
</CustomField>