force-app/main/default/objects/Monthly_Travel_Expense__c/fields/Sales_User__c.field-meta.xml
<CustomField>
    <fullName>Sales_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Monthly_Travel_Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>