force-app/main/default/objects/Monthly_Travel_Expense__c/fields/Total_Distance_Travelled__c.field-meta.xml
<CustomField>
    <fullName>Total_Distance_Travelled__c</fullName>
    <label>Total Distance Travelled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>